Fixed Z-Index
fixed z indexes so the student shit doesnt fuck up

--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,7 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     padding: 0;
     margin: 0;
+    z-index: -1;
 }
 
 .landing-page{
@@ -38,6 +39,7 @@ nav {
     background: rgb(42,42,42);
     height: 10vh;
     border: 1px solid black;
+    z-index: 1;
 }
 
 nav a {
